Thu Apr  9 09:26:47 2015  Eric Wong  <e@80x24.org>

	* ccan/list/list.h: sync with ccan upstream
	  [ccan commit c2fbfe5282ba264f3485586e7efa8a5967f2d386]

Thu Apr  9 08:24:03 2015  Masahiro Tomita  <tommy@tmtm.org>

	* ext/socket/raddrinfo.c (addrinfo_mload): fix memory leak of
	  addrinfo.  [ruby-dev:48923] [Bug #11051]

Wed Apr  8 17:45:02 2015  Shannon Skipper  <shannonskipper@gmail.com>

	* version.c (Init_version): the version of the engine or
	  interpreter.  [Fix GH-858]

Wed Apr  8 16:15:30 2015  Kenta Murata  <mrkn@cookpad.com>

	* bigdecimal: conform to ruby's license.  [ruby-core:68466] [Bug #10952]

Wed Apr  8 14:57:06 2015  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (rb_w32_wreadlink): should treat junctions like as
	  symlinks.

Wed Apr  8 14:03:47 2015  Koichi Sasada  <ko1@atdot.net>

	* test/ruby/test_symbol.rb: fix syntax error.

Wed Apr  8 13:01:06 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* hash.c (rb_any_hash): Symbols are compared by the identities
	  always.  [ruby-core:68767] [Bug #11035]

Tue Apr  7 10:22:51 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* internal.h: fix typo. Patch by @sferik [fix GH-865]

Mon Apr  6 22:52:35 2015  Tanaka Akira  <akr@fsij.org>

	* enum.c: Enumerable#chunk and Enumerable#slice_before no longer takes
	  the initial_state argument.  [Feature #10958]

Mon Apr  6 16:09:58 2015  Koichi Sasada  <ko1@atdot.net>

	* vm_args.c: protect value stack from calling other methods
	  during complex parameter setting process (splat, kw, and so on).
	  [Bug #11027]

	* vm_core.h: remove rb_thead_t::mark_stack_len.
	  With this modification, we don't need to use th->mark_stack_len.

	* test/ruby/test_keyword.rb: add a test.

	* cont.c (cont_capture): catch up this fix.

	* vm.c (rb_thread_mark): ditto.

Mon Apr  6 11:26:42 2015  NARUSE, Yui  <naruse@ruby-lang.org>

	* tool/downloader.rb (http_options): prevent content auto decoding
	  because this is a downloader.
